# NLP_project_group6

./: .gitignore  README.md  TODO  environment.yml  main.ipynb  pyproject.toml
data/: instructions.txt  queries.txt
lab/: CalculateLossThreshold.ipynb  CustomDataset.ipynb  ExploreTLDR.ipynb  ExportCustomDataset.ipynb  FineTuneCustomDataset.ipynb  FineTuneWithCDS(2ndStep).ipynb  FineTune_TLDR.ipynb  FineTuningLLM.ipynb  ForGettingAVideoDetails.ipynb  GuidelinesForProject-Google.ipynb  TLDR_preproc.ipynb  TestSetup-Torch.ipynb  TestSetup.ipynb  VideoResults#1.csv  ask_llm.py  calculate_loss_threshold.ipynb  export_custom_dataset.ipynb  export_dataset.ipynb  fetch_transcript_dataset.py  fetch_video_transcripts.py  fetch_vidoes.py  fill_summary.py  fine_tune_models.ipynb  fine_tune_with_custom_dataset.ipynb  fix_notebook.py  model_evaluation.ipynb  model_generation (1).ipynb  model_generation.ipynb  model_generation_clean.ipynb  post_fine_tune.ipynb  statistical_test.ipynb  token_counter.ipynb
lab copy/: ExploreTLDR.ipynb  ForGettingAVideoDetails.ipynb  TestSetup.ipynb
lab/utils/: FineTune_TLDR.ipynb  batch_utils.py  fill_summary.py
src/: eval_model.py  evaluate.py  extract_from.py  fetch_custom_dataset.py  fill_summary.py  fix_notebook.py  group_clustering.py  load_dataset.py  load_model.py  summary_for_custom_dataset.py  tldr_prepend.py  train_model.py
src/utils/: ask_llm.py  batch_utils.py  torch.py
