[project]
name = "nlp-project-grp-6"
version = "1.0.0"
description = "NLP Project from Group 6"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab (>=4.4.10,<5.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "datasets (>=4.3.0,<5.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "jupyterlab-execute-time (>=3.2.0,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "nltk (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
